--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "multer": "^2.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
